--- a/SPA/resources/lang/ja.json
+++ b/SPA/resources/lang/ja.json
@@ -18,6 +18,13 @@
     "menu.access" : "アクセス",
     "name_spa" : "こころスパ",
 
+    "appointment" : "予定",
+    "full_name" : "フルネーム",
+    "email" : "メール",
+    "staff" : "スタッフ",
+    "date" : "日",
+    "time" : "時間",
+    "confirm" : "確認する",
 
     "welcome" : "ようこそ",
     "welcome.comment" : "KOKORO SPAへようこそ",
@@ -25,7 +32,7 @@
     "gallery" : "私たちのギャラリー",
     "gallery.comment" : " 最初の10分で詩の国高知を体感！",
 
-    "about_us" : "ココチスパについて",
+    "about_us" : "ココロスパについて",
     "about_us.comment1" : "3区ハイバーチュン通りエリアのにぎやかな通りに位置し、特有の蒸し暑い気温の中、こころスパは、セラピートリートメントを通じて心のバランスと癒しをもたらすことのみに焦点を当てています。リラックスして健康を回復する方法です。このマッサージスタイルは、身体のツボに優しく圧力をかけることで血行を促進し、緊張を和らげる療法である指圧を含む伝統的な日本の技術を組み合わせたものです。",
     "about_us.comment2" : "「心」という名前は日本語で「魂」を意味し、体と心の両方の包括的なケアの哲学を表しており、各治療後にリラクゼーションと平安の状態をもたらします。それは同時に、「心からのサービス」を意味するものでもあります。[おもてなし] は日本発祥です。",
 
