--- a/SPA/resources/lang/en.json
+++ b/SPA/resources/lang/en.json
@@ -18,6 +18,14 @@
     "menu.access" : "access",
     "name_spa" : "KOKORO SPA",
 
+    "phone" : "Phone",
+    "appointment" : "appointment",
+    "full_name" : "Full name",
+    "email" : "Email",
+    "staff" : "Staff",
+    "date" : "Date",
+    "time" : "Time",
+    "confirm" : "Confirm",
 
     "welcome" : "Welcome To",
     "welcome.comment" : "Welcome to KOKORO SPA",
@@ -29,7 +37,6 @@
     "about_us.comment1" : "Located on a busy street and with the typical sultry temperature of Hai Ba Trung street area, District 3, こころスパ (Kokoro Spa) only focuses on bringing balance and healing to the soul through therapeutic treatments. method to relax and restore health. This style of massage combines traditional Japanese techniques, including Shiatsu, a therapy that uses gentle pressure on acupuncture points on the body to stimulate circulation and reduce tension.",
     "about_us.comment2" : "The name 'Kokoro' (心) in Japanese means 'soul', representing the philosophy of comprehensive care for both body and mind, bringing a state of relaxation and peace after each treatment. At the same time, it also means 'service from the heart' Omotenashi from Japan.",
 
-    "phone" : "Phone",
     "address" : "Address",
     "contract" : "Contract",
 
