--- a/SPA/resources/lang/ja.json
+++ b/SPA/resources/lang/ja.json
@@ -26,6 +26,9 @@
     "time" : "時間",
     "confirm" : "確認する",
 
+    "no_slots" : "満席",
+    "has_slots" : "空きあり",
+
     "welcome" : "ようこそ",
     "welcome.comment" : "KOKORO SPAへようこそ",
 
