--- a/SPA/resources/lang/vn.json
+++ b/SPA/resources/lang/vn.json
@@ -26,6 +26,9 @@
     "time" : "Thời gian",
     "confirm" : "Xác nhận",
 
+    "no_slots" : "hết chỗ",
+    "has_slots" : "còn chỗ",
+
     "welcome" : "Welcome To",
     "welcome.comment" : "Chào mừng Quý Khách đến KOKORO SPA",
 
