--- a/SPA/resources/lang/en.json
+++ b/SPA/resources/lang/en.json
@@ -34,7 +34,7 @@
     "welcome.comment" : "Welcome to KOKORO SPA",
 
     "gallery" : "Our Gallery",
-    "gallery.comment" : " You will feel the poetic land of Kocochi in just the first 10 minutes!",
+    "gallery.comment" : " You will feel the poetic land of Kokoro in just the first 10 minutes!",
 
     "about_us" : "About KOKORO SPA",
     "about_us.comment1" : "Located on a busy street and with the typical sultry temperature of Hai Ba Trung street area, District 3, こころスパ (Kokoro Spa) only focuses on bringing balance and healing to the soul through therapeutic treatments. method to relax and restore health. This style of massage combines traditional Japanese techniques, including Shiatsu, a therapy that uses gentle pressure on acupuncture points on the body to stimulate circulation and reduce tension.",
@@ -45,7 +45,7 @@
 
     "note1": "* TIP inclueded, VAT not including",
     "note2": "* Customers who want to use VIP rooms",
-    "note3": "1. Kocochi Spa VIP member customers.",
+    "note3": "1. Kokoro Spa VIP member customers.",
     "note4": "2. Customers who using Premium menu.",
     "note5": "3. Customers who purchased package menu.",
     "note6": "4. Customers who pay 100,000 VND for VIP room usage fee as an additional fee.",
