--- a/SPA/resources/lang/vn.json
+++ b/SPA/resources/lang/vn.json
@@ -33,7 +33,7 @@
     "welcome.comment" : "Chào mừng Quý Khách đến KOKORO SPA",
 
     "gallery" : "Our Gallery",
-    "gallery.comment" : " Bạn sẽ cảm nhận được vùng đất thơ mộng tại Kocochi chỉ trong 10 phút đầu tiên !",
+    "gallery.comment" : " Bạn sẽ cảm nhận được vùng đất thơ mộng tại Kokoro chỉ trong 10 phút đầu tiên !",
 
     "about_us" : "Về KOKORO SPA",
     "about_us.comment1" : "Tọa lạc trên con đường sầm uất và nhiệt độ oi bức đặc trưng của khu vực đường Hai Bà Trưng, Quận 3,こころスパ (Kokoro Spa) chỉ tập trung vào việc mang lại sự cân bằng và chữa lành cho tâm hồn thông qua các liệu pháp thư giãn và phục hồi sức khỏe. \nPhong cách massage này kết hợp các kỹ thuật truyền thống của Nhật Bản, bao gồm Shiatsu, một liệu pháp dùng áp lực nhẹ nhàng lên các huyệt đạo trên cơ thể để kích thích tuần hoàn và giảm căng thẳng.",
