--- a/SPA/resources/lang/ja.json
+++ b/SPA/resources/lang/ja.json
@@ -25,6 +25,8 @@
     "date" : "日",
     "time" : "時間",
     "confirm" : "確認する",
+    "booking_info" : "予約情報",
+    "random" : "ランダム",
 
     "no_slots" : "満席",
     "has_slots" : "空きあり",
