--- a/SPA/resources/lang/en.json
+++ b/SPA/resources/lang/en.json
@@ -23,11 +23,19 @@
     "full_name" : "Full name",
     "email" : "Email",
     "staff" : "Staff",
+    "branch" : "Branch",
     "date" : "Date",
     "time" : "Time",
     "confirm" : "Confirm",
     "booking_info" : "Booking information",
     "random" : "random",
+    "service" : "Service",
+    "request" : "Request",
+    "title_appointment" : "MAKE YOUR APPOINTMENT WITH US",
+    "please_enter_full_name" : "please enter full name",
+    "please_enter_phone" : "please enter phone",
+    "please_enter_date" : "please enter date",
+    "please_enter_time" : "please enter time",
 
     "no_slots" : "no slots",
     "has_slots" : "has slots",
