--- a/SPA/resources/lang/ja.json
+++ b/SPA/resources/lang/ja.json
@@ -22,11 +22,20 @@
     "full_name" : "フルネーム",
     "email" : "メール",
     "staff" : "スタッフ",
+    "branch" : "支店",
     "date" : "日",
     "time" : "時間",
     "confirm" : "確認する",
     "booking_info" : "予約情報",
     "random" : "ランダム",
+    "service" : "サービス",
+    "request" : "リクエスト",
+    "title_appointment" : "ご予約はこちら",
+
+    "please_enter_full_name" : "お名前を入力してください",
+    "please_enter_phone" : "電話番号を入力してください",
+    "please_enter_date" : "日付を選択してください",
+    "please_enter_time" : "時間を選択してください",
 
     "no_slots" : "満席",
     "has_slots" : "空きあり",
