--- a/SPA/resources/lang/en.json
+++ b/SPA/resources/lang/en.json
@@ -3,16 +3,177 @@
     "menu" : "Menu",
     "menu.home" : "home",
     "menu.service" : "service",
-    "menu.service.service1" : "Traditional Japanese Massage",
-    "menu.service.service2" : "Shiatsu Massage",
-    "menu.service.service3" : "Thai massage ",
-    "menu.service.service4" : "Neck and shoulder treatment",
-    "menu.service.service5" : "Foot Massage",
-    "menu.service.service6" : "Head Shampoo Relaxing Massage",
-    "menu.service.service7" : "Facial",
-    "menu.service.service8" : "Other services",
-    "menu.service.service9" : "Vip room",
-    "menu.service.service10" : "Combo",
+    "menu.service.service1" : "TRADITIONAL JAPANESE MASSAGE (FULL BODY RELAXATION)",
+
+    "service1.item1.name" : "60 MINUTES (WITHOUT HOT STONES)",
+    "service1.item1.comment" : "(shoulders, neck, forelegs, arms, head)",
+    "service1.item1.price" : "398,000 VND",
+
+    "service1.item2.name" : "90 MINUTES (WITH HOT STONES)",
+    "service1.item2.comment" : "(full body)",
+    "service1.item2.price" : "528,000 VND",
+
+    "service1.item3.name" : "120 MINUTES (WITH HOT STONES)",
+    "service1.item3.comment" : "(full body)",
+    "service1.item3.price" : "678,000 VND",
+
+    "service1.item4.name" : "HOT STONE",
+    "service1.item4.comment" : " ",
+    "service1.item4.price" : "48,000 VND",
+
+    "service1.item5.name" : "GINGER MASKING",
+    "service1.item5.comment" : " ",
+    "service1.item5.price" : "99,000 VND",
+
+    "service1.item6.name" : "AROMA ESSENTIAL OIL",
+    "service1.item6.comment" : " ",
+    "service1.item6.price" : "78,000 VND",
+
+
+    "menu.service.service2" : "SHIATSU MASSAGE",
+
+    "service2.item1.name" : "90MIN",
+    "service2.item1.comment" : " ",
+    "service2.item1.price" : "578,000 VND",
+
+    "service2.item2.name" : "120MIN",
+    "service2.item2.comment" : " ",
+    "service2.item2.price" : "778,000 VND",
+
+    "menu.service.service3" : "THAI MASSAGE (MUSCLE STRETCHING, ACUPRESSURE WITHOUT OIL)",
+
+    "service3.item1.name" : "75MIN",
+    "service3.item1.comment" : " ",
+    "service3.item1.price" : "488,000 VND",
+
+    "service3.item2.name" : "90MIN",
+    "service3.item2.comment" : " ",
+    "service3.item2.price" : "568,000 VND",
+
+    "menu.service.service4" : "NECK AND SHOULDER TREATMENT",
+
+    "service4.item1.name" : "60MIN",
+    "service4.item1.comment" : " ",
+    "service4.item1.price" : "398,000 VND",
+
+    "service4.item2.name" : "90MIN",
+    "service4.item2.comment" : " ",
+    "service4.item2.price" : "528,000 VND",
+
+    "menu.service.service5" : "FOOT MASSAGE",
+
+    "service5.item1.name" : "60MIN",
+    "service5.item1.comment" : " ",
+    "service5.item1.price" : "338,000 VND",
+
+    "service5.item2.name" : "90MIN",
+    "service5.item2.comment" : " ",
+    "service5.item2.price" : "488,000 VND",
+
+    "menu.service.service6" : "HEAD SHAMPOO RELAXING MASSAGE",
+
+    "service6.item1.name" : "RELAXING SHAMPOO, NECK AND SHOULDER MASSAGE 60 MINUTES",
+    "service6.item1.comment" : "(30-MINUTE NECK AND SHOULDER MASSAGE, SHAMPOO 2 TIMES, RINSE, BLOW DRY, HAIR CARE)",
+    "service6.item1.price" : "368,000 VND",
+
+    "service6.item2.name" : "KOKORO SPA HAIR WASH (HAIR TREATMENT) 90 MINUTES",
+    "service6.item2.comment" : "(30-MINUTE NECK AND SHOULDER MASSAGE, 30-MINUTE BASIC SKIN CARE, SHAMPOOS & RINSE 2 TIMES, BLOW DRY, HAIR CARE)",
+    "service6.item2.price" : "488,000 VND",
+
+    "service6.item3.name" : "30-MINUTE HAIR SHAMPOO",
+    "service6.item3.comment" : "(RELAXING HEAD MASSAGE) => APPLY FOR COMBO ONLY",
+    "service6.item3.price" : "88,000 VND",
+
+    "service6.item4.name" : "FACIAL MASK (INCLUDING EXFOLIATION)",
+    "service6.item4.comment" : " ",
+    "service6.item4.price" : "88,000 VND",
+
+    "service6.item5.name" : "15-MINUTE STRESS RELIEF MASSAGE",
+    "service6.item5.comment" : " ",
+    "service6.item5.price" : "88,000 VND",
+
+    "menu.service.service7" : "FACIAL",
+
+    "service7.item1.name" : "45MIN",
+    "service7.item1.comment" : "(MAKEUP REMOVAL, EXFOLIATION, FACIAL CLEANSING, 25-MINUTE BODY-LIFTING MASSAGE, MASK, HEAD MASSAGE, TONER, MOISTURIZER, SUNSCREEN)",
+    "service7.item1.price" : "318,000 VND",
+
+    "service7.item2.name" : "75MIN",
+    "service7.item2.comment" : "(MAKEUP REMOVAL, EXFOLIATION, FACIAL CLEANSING, 40-MINUTE BODY-LIFTING MASSAGE, MASK, HEAD MASSAGE, TONER, MOISTURIZER, SUNSCREEN)",
+    "service7.item2.price" : "518,000 VND",
+
+    "service7.item3.name" : "SAUNA (INCLUED SHOWER)",
+    "service7.item3.comment" : " ",
+    "service7.item3.price" : "88,000 VND",
+
+    "service7.item4.name" : "SHOWER",
+    "service7.item4.comment" : " ",
+    "service7.item4.price" : "68,000 VND",
+
+
+    "menu.service.service8" : "VIP ROOM",
+
+    "service8.item1.name" : "1 PAX",
+    "service8.item1.comment" : " ",
+    "service8.item1.price" : "88,000 VND",
+
+    "service8.item2.name" : "2 PAX",
+    "service8.item2.comment" : " ",
+    "service8.item2.price" : "160,000 VND",
+
+
+    "menu.service.service9" : "KOKORO COMPREHENSIVE RELAXATION COMBO",
+
+    "service9.item1.name" : "TOTAL RELAXATION COMBO 150MIN",
+    "service9.item1.comment" : "(BODY 75MIN + FACIAL 45MIN + HEAD SPA 30MIN)",
+    "service9.item1.price" : "999,000 VND",
+
+    "service9.item2.name" : "MIGAO COMBO",
+    "service9.item2.comment" : " (BODY 60MIN + CUP FACIAL 45MIN)",
+    "service9.item2.price" : "696,000 VND",
+
+    "service9.item3.name" : "BODY HEAD (BODY 60MIN + HEAD SPA 45MIN)",
+    "service9.item3.comment" : " ",
+    "service9.item3.price" : "676,000 VND",
+
+    "service9.item4.name" : "ATAMA RAKU (SHAMPOO 90MIN + FOOT 30MIN)",
+    "service9.item4.comment" : " ",
+    "service9.item4.price" : "668,000 VND",
+
+    "service9.item5.name" : "SERAPY COMBO",
+    "service9.item5.comment" : "(PAIN 90MIN + HOT STONE + GINGER MASK)",
+    "service9.item5.price" : "618,000 VND",
+
+    "service9.item6.name" : "SAKURA COMBO",
+    "service9.item6.comment" : "(SHIATSU 90MIN + LYMP FACIAL 45MIN)",
+    "service9.item6.price" : "999,000 VND",
+
+    "menu.service.service10" : "SHORT TIME MENU",
+
+    "service10.item1.name" : "FULL BODY & PAIN MASSAGE",
+    "service10.item1.comment" : " ",
+    "service10.item1.price" : " ",
+
+    "service10.item2.name" : "30 MIN NECK AND SHOULDER THERAPY",
+    "service10.item2.comment" : " ",
+    "service10.item2.price" : "198,000 VND",
+
+    "service10.item3.name" : "NECK, SHOULDER OR FULL BODY TREATMENT 45 MINUTES",
+    "service10.item3.comment" : " ",
+    "service10.item3.price" : "298,000 VND",
+
+    "service10.item4.name" : "FOOT MASSAGE",
+    "service10.item4.comment" : " ",
+    "service10.item4.price" : " ",
+
+    "service10.item5.name" : "FOOT MASSAGE 30 MIN",
+    "service10.item5.comment" : " ",
+    "service10.item5.price" : "168,000 VND",
+
+    "service10.item6.name" : "FOOT MASSAGE 45 MIN",
+    "service10.item6.comment" : " ",
+    "service10.item6.price" : "248,000 VND",
+
     "menu.promotion" : "promotion",
     "menu.recruitment" : "recruitment",
     "menu.access" : "access",
@@ -76,115 +237,6 @@
     "note8": "VIP rooms are limited. Please note that we may not be able to meet your reservation request, as we will respond on a first-come, first-served basis.",
 
 
-    "traditional_massage.service1" : "60 minutes (without hot stones)",
-    "traditional_massage.comment1" : "(shoulders, neck, forelegs, arms, head)",
-    "traditional_massage.price1" : "499,000 VND ",
-
-    "traditional_massage.service2" : "90 minutes (with hot stones)",
-    "traditional_massage.comment2" : "(full body)",
-    "traditional_massage.price2" : "699,000 VND ",
-
-    "traditional_massage.service3" : "120 minutes (with hot stones)",
-    "traditional_massage.comment3" : "(full body)",
-    "traditional_massage.price3" : "899,000 VND ",
-
-    "traditional_massage.service4" : "Hot stone",
-    "traditional_massage.comment4" : " ",
-    "traditional_massage.price4" : "69,000 VND",
-
-    "traditional_massage.service5" : "Ginger Packing",
-    "traditional_massage.comment5" : " ",
-    "traditional_massage.price5" : "99,000 VND",
-
-    "traditional_massage.service6" : "Aroma Essential Oil",
-    "traditional_massage.comment6" : "choose 1 of 5 types",
-    "traditional_massage.price6" : "99,000 VND",
-
-    "acupressure_massage.service1" : "75 min",
-    "acupressure_massage.comment1" : " ",
-    "acupressure_massage.price1" : "699,000 VND",
-
-    "acupressure_massage.service2" : "120 min",
-    "acupressure_massage.comment2" : " ",
-    "acupressure_massage.price2" : "899,000 VND",
-
-    "thai_massage.service1" : "75 min",
-    "thai_massage.comment1" : " ",
-    "thai_massage.price1" : "699,000 VND",
-
-    "thai_massage.service2" : "90 min",
-    "thai_massage.comment2" : " ",
-    "thai_massage.price2" : "799,000 VND",
-
-    "neck_and_shoulder_therapy.service1" : "60 min",
-    "neck_and_shoulder_therapy.comment1" : " ",
-    "neck_and_shoulder_therapy.price1" : "449,000 VND",
-
-    "neck_and_shoulder_therapy.service2" : "90 min",
-    "neck_and_shoulder_therapy.comment2" : " ",
-    "neck_and_shoulder_therapy.price2" : "699,000 VND",
-
-    "foot_massage.service1" : "60 min",
-    "foot_massage.comment1" : " ",
-    "foot_massage.price1" : "449,000 VND",
-
-    "foot_massage.service2" : "90 min",
-    "foot_massage.comment2" : " ",
-    "foot_massage.price2" : "649,000 VND",
-
-    "healthy_shampoo.service1" : "30-minute hair shampoo",
-    "healthy_shampoo.comment1" : "2 times for shampoo, rinse, blow dry, condition hair (only use with combo)",
-    "healthy_shampoo.price1" : "99,000 VND ",
-
-    "healthy_shampoo.service2" : "Relaxing shampoo, neck and shoulder massage 45 minutes",
-    "healthy_shampoo.comment2" : "15-minute neck and shoulder massage, shampoo 2 times, rinse, blow dry, hair care",
-    "healthy_shampoo.price2" : "299,000 VND ",
-
-    "healthy_shampoo.service3" : "Gội đầu Kokoro spa (hair treatment) 90 phút",
-    "healthy_shampoo.comment3" : " ",
-    "healthy_shampoo.price3" : "599,000 VND ",
-
-    "healthy_shampoo.service4" : "Facial mask",
-    "healthy_shampoo.comment4" : "including exfoliation",
-    "healthy_shampoo.price4" : "99,000 VND",
-
-    "healthy_shampoo.service5" : "15-minute stress relief massage",
-    "healthy_shampoo.comment5" : " ",
-    "healthy_shampoo.price5" : "99,000 VND",
-
-
-    "facial.service1" : "45 min",
-    "facial.comment1" : "makeup removal, exfoliation, facial cleansing, 25-minute body-lifting massage, mask, head massage, toner, moisturizer, sunscreen",
-    "facial.price1" : "349,000 VND",
-
-    "facial.service2" : "75 min",
-    "facial.comment2" : "makeup removal, exfoliation, facial cleansing, 40-minute body-lifting massage, mask, head massage, toner, moisturizer, sunscreen",
-    "facial.price2" : "649,000 VND",
-
-    "other_services.service1" : "Sauna",
-    "other_services.comment1" : " ",
-    "other_services.price1" : "99,000 VND",
-
-    "other_services.service2" : "Shower",
-    "other_services.comment2" : " ",
-    "other_services.price2" : "99,000 VND",
-
-    "vip_room.service1" : "1 pax",
-    "vip_room.comment1" : " ",
-    "vip_room.price1" : "99,000 VND",
-
-    "vip_room.service2" : "2 pax",
-    "vip_room.comment2" : " ",
-    "vip_room.price2" : "190,000 VND",
-
-    "combo.service1" : "Relaxing Combo",
-    "combo.comment1" : "Body 60 minutes + Facial 45 minutes = 105 minutes",
-    "combo.price1" : "819,000 VND",
-
-    "combo.service2" : "Total relaxation Combo ",
-    "combo.comment2" : "Body 75 minutes + Facial 45 minutes + Shampoo 30 minutes = 150 minutes",
-    "combo.price2" : "1,059,000 VND",
-
     "access.detail" : "Contact Details",
     "access.detail.comment" : "It is located just after going up the side street of Hai Ba Trung Street",
 
@@ -195,7 +247,7 @@
     "access.contact.phone" : "Phone : ",
     "access.contact.email" : "Email : ",
     "access.contact.phone.comment" : "086 500 8868",
-    "access.contact.email.comment" : "kokorospaservice@gmail.com",
+    "access.contact.email.comment" : "kokorospaservices@gmail.com",
 
     "access.working_hours" : "Working Hours",
     "access.working_hours.everyday" : "Everyday : ",
