--- a/SPA/resources/lang/ja.json
+++ b/SPA/resources/lang/ja.json
@@ -3,16 +3,180 @@
     "menu" : "Menu",
     "menu.home" : "home",
     "menu.service" : "サービス&メニュー ",
-    "menu.service.service1" : "日本古式マッサージ",
-    "menu.service.service2" : "指圧マッサージ",
-    "menu.service.service3" : "タイ古式マッサージ",
+    "menu.service.service1" : "日本古式マッサージ（全身リラクゼーション）",
+
+
+    "service1.item1.name" : "60分（暖石なし）",
+    "service1.item1.comment" : "（肩、首、前脚、腕、頭）",
+    "service1.item1.price" : "398,000 VND",
+
+    "service1.item2.name" : "90分（暖石有り）",
+    "service1.item2.comment" : "（全身）",
+    "service1.item2.price" : "528,000 VND",
+
+    "service1.item3.name" : " 120分（暖石有り）",
+    "service1.item3.comment" : "（全身）",
+    "service1.item3.price" : "678,000 VND",
+
+    "service1.item4.name" : "暖石",
+    "service1.item4.comment" : " ",
+    "service1.item4.price" : "48,000 VND",
+
+    "service1.item5.name" : "ジンジャーマスク",
+    "service1.item5.comment" : " ",
+    "service1.item5.price" : "99,000 VND",
+
+    "service1.item6.name" : " アロマ精油",
+    "service1.item6.comment" : " ",
+    "service1.item6.price" : "78,000 VND",
+
+    "menu.service.service2" : "SHIATSU MASSAGE",
+
+    "service2.item1.name" : "90分",
+    "service2.item1.comment" : " ",
+    "service2.item1.price" : "578,000 VND",
+
+    "service2.item2.name" : "120分",
+    "service2.item2.comment" : " ",
+    "service2.item2.price" : "778,000 VND",
+
+    "menu.service.service3" : "THAI MASSAGE (MUSCLE STRETCHING, ACUPRESSURE WITHOUT OIL)",
+
+    "service3.item1.name" : "75MIN",
+    "service3.item1.comment" : " ",
+    "service3.item1.price" : "488,000 VND",
+
+    "service3.item2.name" : "90MIN",
+    "service3.item2.comment" : " ",
+    "service3.item2.price" : "568,000 VND",
+
+
     "menu.service.service4" : "首と肩のトリートメント",
+
+    "service4.item1.name" : "60分",
+    "service4.item1.comment" : " ",
+    "service4.item1.price" : "398,000 VND",
+
+    "service4.item2.name" : "90分",
+    "service4.item2.comment" : " ",
+    "service4.item2.price" : "528,000 VND",
+
     "menu.service.service5" : "フートマッサージ",
+
+    "service5.item1.name" : "60分",
+    "service5.item1.comment" : " ",
+    "service5.item1.price" : "338,000 VND",
+
+    "service5.item2.name" : "90分",
+    "service5.item2.comment" : " ",
+    "service5.item2.price" : "488,000 VND",
+
+
     "menu.service.service6" : "ヘッドシャンプー リラクシングマッサージ",
+
+    "service6.item1.name" : "リラックスシャンプー、首と肩のマッサージ 60 分",
+    "service6.item1.comment" : "(30 分間の首と肩のマッサージ、シャンプー 2 回、リンス、ブロー、ヘアケア)",
+    "service6.item1.price" : "368,000 VND",
+
+    "service6.item2.name" : "ココロスパ ヘアトリートメント（ヘアトリートメント） 90分",
+    "service6.item2.comment" : "(首肩マッサージ30分、基礎スキンケア30分、リンス2回、乾燥、ヘアケア）",
+    "service6.item2.price" : "488,000 VND",
+
+    "service6.item3.name" : "30分ヘアシャンプー",
+    "service6.item3.comment" : "（ヘッドマッサージ）=>コンボのみ使用",
+    "service6.item3.price" : "88,000 VND",
+
+    "service6.item4.name" : "マスク（角質除去込み）",
+    "service6.item4.comment" : " ",
+    "service6.item4.price" : "88,000 VND",
+
+    "service6.item5.name" : "15分間のストレス解消マッサージ",
+    "service6.item5.comment" : " ",
+    "service6.item5.price" : "88,000 VND",
+
     "menu.service.service7" : "基礎スキンケア/フェイシャル",
-    "menu.service.service8" : "追加サービス",
-    "menu.service.service9" : "VIP個室部屋",
-    "menu.service.service10" : "ココロスパコリラクゼーションコンボ",
+
+    "service7.item1.name" : "45分",
+    "service7.item1.comment" : "（メイク落とし、角質除去、洗顔、25分間のボディリフティングマッサージ、マスク、ヘッドマッサージ、化粧水、保湿剤、日焼け止め）",
+    "service7.item1.price" : "318,000 VND",
+
+    "service7.item2.name" : "75分",
+    "service7.item2.comment" : "（メイク落とし、角質除去、洗顔、40分間のボディリフティングマッサージ、マスク、ヘッドマッサージ、",
+    "service7.item2.price" : "518,000 VND",
+
+    "service7.item3.name" : "サウナ（シャワー付き）",
+    "service7.item3.comment" : " ",
+    "service7.item3.price" : "88,000 VND",
+
+    "service7.item4.name" : "シャワー",
+    "service7.item4.comment" : " ",
+    "service7.item4.price" : "68,000 VND",
+
+
+    "menu.service.service8" : "VIP個室部屋",
+
+    "service8.item1.name" : "1 名様",
+    "service8.item1.comment" : " ",
+    "service8.item1.price" : "88,000 VND",
+
+    "service8.item2.name" : "2 名様",
+    "service8.item2.comment" : " ",
+    "service8.item2.price" : "160,000 VND",
+
+
+    "menu.service.service9" : "KOKORO COMBO THƯ GIÃN TOÀN DIỆN",
+
+    "service9.item1.name" : "(ボディマッサージ75分 + フェイシャル45分 + ヘッドスパ30分)",
+    "service9.item1.comment" : " ",
+    "service9.item1.price" : "999,000 VND",
+
+    "service9.item2.name" : "見顔コンボ (ボディマッサージ60分 + カップフェーシャル45分)",
+    "service9.item2.comment" : " ",
+    "service9.item2.price" : "696,000 VND",
+
+    "service9.item3.name" : "ボディヘッドコンボ：ボディマッサージ60分 + ヘッドシャンプー45分",
+    "service9.item3.comment" : " ",
+    "service9.item3.price" : "676,000 VND",
+
+    "service9.item4.name" : "頭楽コンボ：ヘッドシャンプー90分 + フートマッサージ30分",
+    "service9.item4.comment" : " ",
+    "service9.item4.price" : "668,000 VND",
+
+    "service9.item5.name" : "セラピーコンボ：肩こり解消90分 + 暖石 + ジンジャーボディマスク",
+    "service9.item5.comment" : " ",
+    "service9.item5.price" : "618,000 VND",
+
+    "service9.item6.name" : "桜コンボ：指圧90分 + リンパフェーシャル45分",
+    "service9.item6.comment" : " ",
+    "service9.item6.price" : "999,000 VND",
+
+
+    "menu.service.service10" : "ショートタイムメニュー",
+
+    "service10.item1.name" : "全身と首と肩のマッサージ",
+    "service10.item1.comment" : " ",
+    "service10.item1.price" : " ",
+
+    "service10.item2.name" : "肩こり解消 30分",
+    "service10.item2.comment" : " ",
+    "service10.item2.price" : "198,000 VND",
+
+    "service10.item3.name" : "肩こり解消や全身ボディマッサージ 45分",
+    "service10.item3.comment" : " ",
+    "service10.item3.price" : "298,000 VND",
+
+    "service10.item4.name" : "フートマッサージ",
+    "service10.item4.comment" : " ",
+    "service10.item4.price" : " ",
+
+    "service10.item5.name" : "フットマッサージ30分",
+    "service10.item5.comment" : " ",
+    "service10.item5.price" : "168,000 VND",
+
+    "service10.item6.name" : "フットマッサージ 45分",
+    "service10.item6.comment" : " ",
+    "service10.item6.price" : "248,000 VND",
+
     "menu.promotion" : "プロモーション",
     "menu.recruitment" : "求人募集",
     "menu.access" : "アクセス",
@@ -76,114 +240,6 @@
     "note7": "※上記対象のお客様は予約時に「VIPルーム使用を希望」とお伝えください。VIPルームには限りがあります。",
     "note8": "予約先着順にて対応しますので、予約のご希望に添えない場合がございますことを予めご了承くださいませ。",
 
-    "traditional_massage.service1" : "60分（暖石なし）",
-    "traditional_massage.comment1" : "(肩、首、前脚、腕、頭)",
-    "traditional_massage.price1" : "499,000 VND ",
-
-    "traditional_massage.service2" : "90分（暖石有り）",
-    "traditional_massage.comment2" : "(全身)",
-    "traditional_massage.price2" : "699,000 VND ",
-
-    "traditional_massage.service3" : "120分（暖石有り）",
-    "traditional_massage.comment3" : "(全身)",
-    "traditional_massage.price3" : "899,000 VND ",
-
-    "traditional_massage.service4" : "暖石",
-    "traditional_massage.comment4" : " ",
-    "traditional_massage.price4" : "69,000 VND",
-
-    "traditional_massage.service5" : "ジンジャーマスク",
-    "traditional_massage.comment5" : " ",
-    "traditional_massage.price5" : "99,000 VND",
-
-    "traditional_massage.service6" : "アロマ精油",
-    "traditional_massage.comment6" : " ",
-    "traditional_massage.price6" : "99,000 VND",
-
-    "acupressure_massage.service1" : "75分",
-    "acupressure_massage.comment1" : " ",
-    "acupressure_massage.price1" : "699,000 VND",
-
-    "acupressure_massage.service2" : "120分",
-    "acupressure_massage.comment2" : " ",
-    "acupressure_massage.price2" : "899,000 VND",
-
-    "thai_massage.service1" : "75分",
-    "thai_massage.comment1" : " ",
-    "thai_massage.price1" : "699,000 VND",
-
-    "thai_massage.service2" : "90分",
-    "thai_massage.comment2" : " ",
-    "thai_massage.price2" : "799,000 VND",
-
-    "neck_and_shoulder_therapy.service1" : "60分",
-    "neck_and_shoulder_therapy.comment1" : " ",
-    "neck_and_shoulder_therapy.price1" : "449,000 VND",
-
-    "neck_and_shoulder_therapy.service2" : "90分",
-    "neck_and_shoulder_therapy.comment2" : " ",
-    "neck_and_shoulder_therapy.price2" : "699,000 VND",
-
-    "foot_massage.service1" : "60分",
-    "foot_massage.comment1" : " ",
-    "foot_massage.price1" : "449,000 VND",
-
-    "foot_massage.service2" : "90分",
-    "foot_massage.comment2" : " ",
-    "foot_massage.price2" : "649,000 VND",
-
-    "healthy_shampoo.service1" : "Gội sạch 30 分",
-    "healthy_shampoo.comment1" : "gội 2 lần, xả, sấy, dưỡng tóc (chỉ sử dụng với combo)",
-    "healthy_shampoo.price1" : "99,000 VND ",
-
-    "healthy_shampoo.service2" : "Gội đầu thư giãn massage cổ vai gáy 45 phút",
-    "healthy_shampoo.comment2" : "massage cổ vai gáy 15p, gội 2 lần xả, sấy, dưỡng tóc",
-    "healthy_shampoo.price2" : "299,000 VND ",
-
-    "healthy_shampoo.service3" : "Gội đầu Kokoro spa (hair treatment) 90 phút",
-    "healthy_shampoo.comment3" : "massage cổ vai gáy 30p, chăm sóc da cơ bản 30p, gội 2 lần xả, sấy, dưỡng tóc",
-    "healthy_shampoo.price3" : "599,000 VND ",
-
-    "healthy_shampoo.service4" : "Đắp mặt nạ",
-    "healthy_shampoo.comment4" : "bao gồm tẩy tế bào chết",
-    "healthy_shampoo.price4" : "99,000 VND",
-
-    "healthy_shampoo.service5" : "Giảm stress 15 phút",
-    "healthy_shampoo.comment5" : " ",
-    "healthy_shampoo.price5" : "99,000 VND",
-
-    "facial.service1" : "45分",
-    "facial.comment1" : "メイク落とし、角質除去、洗顔、25分間のボディリフティングマッサージ、マスク、ヘッドマッサージ、化粧水、保湿剤、日焼け止め",
-    "facial.price1" : "349,000 VND",
-
-    "facial.service2" : "75分",
-    "facial.comment2" : "メイク落とし、角質除去、洗顔、40分間のボディリフティングマッサージ、マスク、ヘッドマッサージ、化粧水、保湿剤、日焼け止め",
-    "facial.price2" : "649,000 VND",
-
-    "other_services.service1" : "サウナ",
-    "other_services.comment1" : " ",
-    "other_services.price1" : "99,000 VND",
-
-    "other_services.service2" : "シャワー",
-    "other_services.comment2" : " ",
-    "other_services.price2" : "99,000 VND",
-
-    "vip_room.service1" : "1名様",
-    "vip_room.comment1" : " ",
-    "vip_room.price1" : "99,000 VND",
-
-    "vip_room.service2" : "2名様",
-    "vip_room.comment2" : " ",
-    "vip_room.price2" : "190,000 VND",
-
-    "combo.service1" : "リラックス コンボ ",
-    "combo.comment1" : "ボディ 60 分 + フェイシャル 45 分 = 105 分",
-    "combo.price1" : "819,000 VND",
-
-    "combo.service2" : "トータル リラクゼーション コンボ ",
-    "combo.comment2" : "ボディ 75 分 + フェイシャル 45 分 + ウォッシュ 30 分 = 150 分",
-    "combo.price2" : "1,059,000 VND",
-
     "access.detail" : "連絡先",
     "access.detail.comment" : "ハイバチュン通りの脇道を上ったところにあります",
 
@@ -194,7 +250,7 @@
     "access.contact.phone" : "電話 : ",
     "access.contact.email" : "電子メール : ",
     "access.contact.phone.comment" : "086 500 8868",
-    "access.contact.email.comment" : "kokorospaservice@gmail.com",
+    "access.contact.email.comment" : "kokorospaservices@gmail.com",
 
     "access.working_hours" : "労働時間",
     "access.working_hours.everyday" : "日常 : ",
